--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=spring-boot-hw
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring-boot-hw
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=secret
+spring.jpa.hibernate.ddl-auto=update
+
+#logging.level.sql=trace
+#logging.level.org.hibernate=trace
